<resources>
    <string name="app_name">ΕΥ ΖΗΝ</string>
    <string name="state_capital">Λιανική Τιμή Φαρμάκου:</string>
    <string name="erotimatologio">Questionaire</string>
    <string-array name="deutera">
        <item>.00</item>
        <item>25</item>
        <item>10</item>
        <item>0</item>
    </string-array>
    <string-array name="trita">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>

    </string-array>
    <string name="textInfo">Βαθμολογείστε σε μία κλίμακα από το 1 μέχρι το 3 τι πιστεύετε ότι σας αφορά σχετικά με τα συμπτώματα που αναφέρονται πιο κάτω.
        Αν τα συμπτώματα είναι σπάνια (λιγότερο από 2-3 φορές το μήνα) βαθμολογείστε με 1. Αν πιο συχνά και πιο έντονα βαθμολογείστε με 2. Αν σχεδόν καθημερινά και πολύ έντονα βαθμολογείστε με 3.
        Ο Σύμβουλος Ορθομοριακών Σκευασμάτων θα αξιολογήσει τη βαθμολογία και θα σας συστήσει το Ορθομοριακό Πρόγραμμα που χρειάζεστε. Παρακαλούμε βαθμολογήστε το σύμπτωμα που σας αφορά.</string>
    <string name="emailSubject">Ερωτηματολόγιο ΕΥ ΖΗΝ</string>
    <string name="title_activity_eu_zin_drawer">ΕΥ ΖΗΝ</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Οδηγίες χρήσεως</string>
    <string name="drawerEpikefalis">Ευ Ζήν</string>
    <string name="epikoinonia">Επικοινωνία</string>
    <string name="topothesia">Τοποθεσία</string>
    <string name="emailGeniko">Ευ Ζην εφαρμογή android</string>
    <string name="odigiesforEuZin">Καλώς ήρθατε στο ερωτηματολόγιο του ΕΥ ΖΗΝ!! Πατήστε στην κεντρική οθόνη το λευκό σήμα για να εισέρθετε στο ερωτηματολόγιο.Ξεκινήστε με τις απλές
    ερωτήσεις επιλέγοντας στα πεδία τα αστεράκια που θεωρείτε οτι αντιπροσωπεύουν το σύμπτωμα και τη συχνότητα που εμφανίζεται. Βάλτε 1 αστεράκι σε σπάνια συμπτώματα και 3 σε πολύ συχνά εμφανιζόμενα
    Σε περίπτωση λάθους πατήστε πάνω στα αστεράκια και κάντε swipe προς τα αριστερά για να μηδενίσουν τα αστεράκια. Στο τέλος αυτής της σελίδας υπάρχει βελάκι που σας οδηγεί στις
    επόμενες ερωτήσεις. Εκεί ακολουθώντας τις επικεφαλίδες απαντάτε στις ερωτήεις και στο τέλος προχωρείτε με το δεξί βελάκι προς την τελευταία σελίδα των στοιχείων.
    Αφού βάλετε τα στοιχεία σας πατήστε στο σήμα με το e-mail για να αποστείλετε τα στοιχεία στο κατάστημα. Μπορείτε να γυρίσετε πίσω με τα πράσινα βελάκια για να
    ξαναδείτε και να διορθώσετε τις απαντήσεις σας. Αν γυρίσετε στην κεντρική εισαγωγική οθόνη με το λευκό σήμα τότε όλα τα στοιχεία σβήνουν. Για περισσότερες
    πληροφορίες στείλτε e-mail πατώντας το πράσινο κουμπί στην κεντρική οθόνη</string>
    <string name="drawer_header_info">Πληροφορίες</string>
    <string name="extra_mail_subject">Επικοινωνώ για να ζητήσω πληροφορίες σχετικά με το ερωτηματολόγιο και το κατάστημα ΕΥ ΖΗΝ Καλαμάτας</string>
    <string name="tsekare_me_internet">Τσέκαρε την εφαρμογή για το κατάστημα Ευ Ζήν Καλαμάτας https://play.google.com/store/apps/details?id=com.euzin.android.viewpager</string>
    <string name="send_app_header_of_intent">Αποστολή εφαρμογής:</string>
    <string name="telephone_Pantelis">6945492375</string>
    <string name="telephone_Nick">6946496987</string>
    <string name="telephone_stathero">2721402404</string>
    <string name="facebook">https://www.facebook.com/efzinkalamata/</string>
    <string name="genika">Γενικά</string>
    <string name="health">Υγεία</string>
    <string name="info">Στοιχεία</string>
    <string name="toast_while_wait">Επεξεργασία στοιχείων για αποστολή...</string>
    <string name="toast_end_pdf">Το .pdf αποθηκεύτηκε στη διαδρομή: /Εσωτερικός χώρος αποθήκευσης/EuZin</string>
    <string name="hello">Χαίρεται. Το όνομά μου είναι </string>
    <string name="apostelo">και σας στέλνω το ερωτηματολόγιο. </string>
    <string name="parakalo">Παρακαλώ εικοινωνήστε μαζί μου στο e-mail ή στο τηλέφωνο. Ευχαριστώ!</string>
    <string name="odigies_erot_head">Οδηγίες για το ερωτηματολόγιο</string>
    <string name="drawer_content_eroti">ΕΡΩΤΗΜΑΤΟΛΟΓΙΟ</string>
    <string name="prosopikes_epikefalis">ΠΡΟΣΩΠΙΚΑ  ΣΤΟΙΧΕΙΑ</string>
    <string name="kato_epikefalis">Παρακαλώ εισάγετε τα στοιχεία σας ώστε να μας βοηθήσετε να επικοινωνήσουμε μαζί σας</string>
    <string name="prosopikes_eponimo">ΕΠΩΝΥΜΟ</string>
    <string name="prosopikes_onoma">ΟΝΟΜΑ</string>
    <string name="prosopikes_address">ΔΙΕΥΘΥΝΣΗ</string>
    <string name="prosopikes_perioxi">ΠΕΡΙΟΧΗ</string>
    <string name="prosopikes_TK">ΤΚ</string>
    <string name="prosopikes_phones">ΤΗΛΕΦΩΝΑ</string>
    <string name="prosopikes_fax">ΦΑΞ/E-MAIL</string>
    <string name="prosopikes_age">ΗΛΙΚΙΑ</string>
    <string name="prosopikes_occupation">ΕΠΑΓΓΕΛΜΑ</string>
    <string name="prosopikes_weight">ΒΑΡΟΣ</string>
    <string name="prosopikes_height">ΥΨΟΣ</string>
    <string name="prosopikes_elseInfo">ΑΛΛΑ ΣΤΟΙΧΕΙΑ</string>
    <string name="prosopikes_imerominia_text">ΗΜΕΡΟΜΗΝΙΑ</string>
    <string name="ygeia_textnumber">1.  </string>
    <string name="ygeia_textperigrafi_flegmones1">Πόνοι αρθρώσεων, πόνοι μυών, κράμπες, δυσκαμψία κινήσεων</string>
    <string name="ygeia_textperigrafi_flegmones2">Έκζεμα, ψωρίαση, δερματοπάθειες γενικά</string>
    <string name="ygeia_textperigrafi_flegmones3">Φαγούρα, εξανθήματα, ξηροδερμία</string>
    <string name="ygeia_textperigrafi_flegmones4">Άσθμα, βρογχίτιδα</string>
    <string name="ygeia_textperigrafi_flegmones5">Βήχας, ερεθισμένος λαιμός, βραχνάδα, απώλεια φωνής</string>
    <string name="ygeia_textperigrafi_flegmones6">Αλλεργίες, τροφικές δυσανεξίες</string>
    <string name="ygeia_textperigrafi_flegmones7">Κυστίτιδα ή άφθες</string>
    <string name="ygeia_textperigrafi_flegmones8">Ρευματισμοί ή αρθρίτιδα</string>
    <string name="ygeia_textperigrafi_flegmones9">Πόνοι στα γόνατα</string>
    <string name="flegmones">Φλεγμονές</string>
    <string name="gastrenteriki">Γαστρεντερική Λειτουργία</string>
    <string name="ygeia_textperigrafi_gastrent1">Διαρροϊκό σύνδρομο, δυσκοιλιότητα, σπαστική κολίτιδα</string>
    <string name="ygeia_textperigrafi_gastrent2">Ξινίλες ή καούρες, φουσκώματα, αέρια</string>
    <string name="ygeia_textperigrafi_gastrent3">Άσχημη αναπνοή</string>
    <string name="ygeia_textperigrafi_gastrent4">Έχετε συχνά στομαχικές διαταραχές</string>
    <string name="ygeia_textperigrafi_gastrent5">Έχετε συχνά μια αίσθηση καψίματος στο στομάχι</string>
    <string name="ygeia_textperigrafi_gastrent6">Έχετε δυσκολία στην πέψη λιπαρών τροφών, οσπρίων και λαχανικών</string>
    <string name="ygeia_textperigrafi_gastrent7">\nΧρησιμοποιείτε συχνά φάρμακα που υποβοηθούν την πέψη</string>
    <string name="ygeia_textperigrafi_gastrent8">Παίρνετε συχνά αντιβίωση</string>
    <string name="apotojinosi">Ικανότητα αποτοξίνωσης</string>
    <string name="ygeia_perigrafi_apotojinosi1">Μπουκωμένη μύτη, ιγμορίτιδα και ρινική καταρροή</string>
    <string name="ygeia_perigrafi_apotojinosi2">Μάτια που δακρύζουν ή τσούζουν</string>
    <string name="ygeia_perigrafi_apotojinosi3">Ακμή</string>
    <string name="ygeia_perigrafi_apotojinosi4">Πρησμένη αποχρωματισμένη γλώσσα</string>
    <string name="ygeia_perigrafi_apotojinosi5">Παίρνετε συχνά φάρμακα.</string>
    <string name="ygeia_perigrafi_apotojinosi6">Καπνίζετε περισσότερα από 5 τσιγάρα την ημέρα, πίνετε αλκοόλ, αναψυκτικά.</string>
    <string name="ygeia_perigrafi_apotojinosi7">\nΚατοικείτε και εργάζεστε κοντά σε οδικές αρτηρίες, σε μεγάλη πόλη, τρώτε προϊόντα εντατικής καλλιέργειας με λιπάσματα και φυτοφάρμακα</string>
    <string name="ygeia_perigrafi_apotojinosi8">Πονοκέφαλοι ή ημικρανίες</string>
    <string name="ygeia_perigrafi_apotojinosi9">Βλέφαρα πρησμένα, ερεθισμένα ή βλέφαρα που κολλάνε</string>
    <string name="ygeia_perigrafi_apotojinosi10">Αίσθημα αδυναμίας ή ατονία</string>
    <string name="ygeia_perigrafi_apotojinosi11">Βαρύ και μπουκωμένο στήθος, λαχάνιασμα, δυσκολία στην αναπνοή</string>
    <string name="ygeia_perigrafi_apotojinosi12">Θολή ή μειωμένη περιμετρική όραση</string>
    <string name="ygeia_perigrafi_apotojinosi13">Φαγούρα, εξανθήματα, ξηρό δέρμα</string>
    <string name="ygeia_perigrafi_apotojinosi14">Κοκκινίλες στο δέρμα ή/και συχνές ξαφνικές εξάψεις, υπερβολικός ιδρώτας</string>
    <string name="orthomoriakesElleipseis">Ορθομοριακές θρεπτικές ελλείψεις</string>
    <string name="ygeia_orthomoriakew1">Τριχόπτωση, ξηρά ή λιπαρά μαλλιά, πρόωρο γκριζάρισμα μαλλιών</string>
    <string name="ygeia_orthomoriakew2">\nΚαθυστέρηση στην επούλωση πληγών, εύκολο μελάνιασμα δέρματος</string>
    <string name="ygeia_orthomoriakew3">\nΣυχνά κρυολογήματα, ιώσεις και λοιμώξεις</string>
    <string name="ygeia_orthomoriakew4">Μούδιασμα στα χέρια (σαν βελόνες)</string>
    <string name="ygeia_orthomoriakew5">Υπέρταση, αρρυθμία, ταχυπαλμίες</string>
    <string name="ygeia_orthomoriakew6">Ωχρότητα δέρματος, νωθρότητα, ανορεξία ή ναυτία</string>
    <string name="ygeia_orthomoriakew7">\nΜειωμένη αίσθηση γεύσης ή όσφρησης, άσπρες κηλίδες σε περισσότερα από δύο νύχια, χαμηλή γονιμότητα, ραγάδες στο δέρμα</string>
    <string name="ygeia_orthomoriakew8">Κακή αίσθηση ισορροπίας</string>
    <string name="ygeia_orthomoriakew9">\nΥπερβολική εφίδρωση ή κρύος ιδρώτας, βουλιμία, ανάγκη για συχνά τσιμπολογήματα, εθισμός στις γλυκές τροφές και την ζάχαρη, υπνηλία κατά την διάρκεια της ημέρας</string>
    <string name="ygeia_orthomoriakew10">\nΧρειάζεστε το πρωί τονωτικό για να ξεκινήσετε την ημέρα σας, π.χ. τσιγάρο, καφέ</string>
    <string name="ygeia_orthomoriakew11">\nΧρειάζεστε περισσότερο από 20 λεπτά για να σηκωθείτε αφότου ξυπνήσετε</string>
    <string name="ygeia_orthomoriakew12">\nΑποφεύγετε να αθλείστε λόγω κούρασης, έχετε λιγότερη ενέργεια από ότι στο παρελθόν</string>
    <string name="ygeia_orthomoriakew13">Κατάθλιψη, ανορεξία</string>
    <string name="ygeia_orthomoriakew14">Αδύνατη νυκτερινή όραση</string>
    <string name="ygeia_orthomoriakew15">Στοματικά έλκη, ακμή</string>
    <string name="ygeia_vioximiko1">Μειωμένη διάθεση για ερωτική επαφή ή ικανότητα</string>
    <string name="vioximiko">Βιοχημικό Άγχος</string>
    <string name="ygeia_vioximiko2">\nΕκνευρίζεστε συχνά ακόμα και όταν δεν υπάρχει σοβαρός λόγος</string>
    <string name="ygeia_vioximiko3">\nΣας φοβίζει το μέλλον, μετανιώνετε για το παρελθόν</string>
    <string name="ygeia_vioximiko4">\nΑρχίζετε 2-3 δουλειές ταυτόχρονα</string>
    <string name="ygeia_vioximiko5">\nΥποφέρετε από αϋπνίες, μελαγχολία, κατάθλιψη, χρόνια κούραση, έλλειψη ενέργειας</string>
    <string name="ygeia_vioximiko6">\nΑισθάνεστε ενοχές όταν χαλαρώνετε, έχετε επίμονη ανάγκη για επιτυχίες</string>
    <string name="ygeia_vioximiko7">\nΑισθάνεστε συχνά την ανάγκη να κλάψετε</string>
    <string name="ygeia_vioximiko8">\nΑισθάνεστε ότι απειλείστε αλλά δεν γνωρίζετε από πού, αισθάνεστε αποξένωση από το περιβάλλον, έχετε έμμονες σκέψεις</string>
    <string name="ygeia_vioximiko9">\nΠάσχετε από αγοραφοβία ή φοβίες γενικά</string>
    <string name="ygeia_vioximiko10">\nΞεχνάτε εύκολα, έχετε χαμηλή αυτοεκτίμηση</string>
    <string name="ygeia_vioximiko11">\nΓίνεστε ανυπόμονοι όταν οι άνθρωποι ή οι καταστάσεις σας κάνουν να περιμένετε</string>
    <string name="ygeia_vioximiko12">\nΈχετε συχνά αβεβαιότητα για το τι πρέπει να κάνετε</string>
    <string name="woman">Ερωτήσεις για γυναίκες</string>
    <string name="ygeia_Gynaikes1">Μεγάλη αιμορραγία κατά την  περίοδο</string>
    <string name="ygeia_Gynaikes2">Ακατάστατη περίοδος, προεμμηνορροϊκό σύνδρομο</string>
</resources>