<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearProsopikes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primaryEu"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="7dp"
            android:text="@string/prosopikes_epikefalis"
            android:textAlignment="center"
            android:textColor="@color/icons"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:padding="4dp"
            android:text="@string/kato_epikefalis"
            android:textAlignment="center"
            android:textColor="@color/icons" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/relativeproto"
            style="@style/view_edit_for_item_stoixeia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView">

            <android.support.design.widget.TextInputLayout style="@style/prosopikes_textInputLayout">

                <EditText
                    android:id="@+id/stoixeiaEponimo"
                    android:hint="@string/prosopikes_eponimo"
                    style="@style/prosopikes_editText" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout style="@style/prosopikes_textInputLayout">

                <EditText
                    android:id="@+id/stoixeiaOnoma"
                    style="@style/prosopikes_editText"
                    android:hint="@string/prosopikes_onoma" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout style="@style/prosopikes_textInputLayout">

                <EditText
                    style="@style/prosopikes_editText"
                    android:hint="@string/prosopikes_address" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout style="@style/prosopikes_textInputLayout">

                <EditText
                    style="@style/prosopikes_editText"
                    android:hint="@string/prosopikes_perioxi" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout style="@style/prosopikes_textInputLayout">

                <EditText
                    style="@style/prosopikes_editText"
                    android:hint="@string/prosopikes_TK"
                    android:inputType="number" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout style="@style/prosopikes_textInputLayout">

                <EditText
                    style="@style/prosopikes_editText"
                    android:hint="@string/prosopikes_phones"
                    android:inputType="phone" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout style="@style/prosopikes_textInputLayout">

                <EditText
                    style="@style/prosopikes_editText"
                    android:hint="@string/prosopikes_fax" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout style="@style/prosopikes_textInputLayout">

                <EditText
                    style="@style/prosopikes_editText"
                    android:hint="@string/prosopikes_age"
                    android:inputType="number" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout style="@style/prosopikes_textInputLayout">

                <EditText
                    style="@style/prosopikes_editText"
                    android:hint="@string/prosopikes_occupation" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout style="@style/prosopikes_textInputLayout">

                <EditText
                    style="@style/prosopikes_editText"
                    android:hint="@string/prosopikes_weight"
                    android:inputType="numberDecimal" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout style="@style/prosopikes_textInputLayout">

                <EditText
                    style="@style/prosopikes_editText"
                    android:hint="@string/prosopikes_height"
                    android:inputType="numberDecimal" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout style="@style/prosopikes_textInputLayout">

                <EditText
                    style="@style/prosopikes_editText"
                    android:hint="@string/prosopikes_elseInfo" />
            </android.support.design.widget.TextInputLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="end">
            <TextView
                android:layout_marginTop="7dp"
                android:text="@string/prosopikes_imerominia_text"
                android:textStyle="bold"
                style="@style/prosopikes_imerominia" />

            <TextView
                android:layout_gravity="center"
                android:id="@+id/imerominiaTextDisplay"
                style="@style/prosopikes_imerominia"
                android:layout_marginTop="4dp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp">
            <ImageButton
                android:id="@+id/backTooMain"
                android:src="@drawable/arrow_left"
                style="@style/prosopikes_button_end" />
            <ImageButton
                android:id="@+id/apostoli"
                android:src="@drawable/send_mail"
                style="@style/prosopikes_button_end_mail"/>
        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/prosopikes_view"
            android:background="@color/primaryEu"></View>

    </LinearLayout>

</ScrollView>